Revert "fix for accordions not working on iOS?"
This reverts commit d8d15787fc77db8ceaa010d7bb68402a2269ec7b.

--- a/_components/css/accordion.css
+++ b/_components/css/accordion.css
@@ -10,11 +10,8 @@
     border-radius: 8px;
     font-family: var(--serif);
 }
-.accordion-panel {
+.accordion-header:has(> .accordion-button[aria-expanded="false"]) + .accordion-panel {
     display: none;
-}
-.accordion-header:has(> .accordion-button[aria-expanded="true"]) + .accordion-panel {
-    display: block;
 }
 .accordion-header  .accordion-indicator {
     color: var(--red);
